// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | TabTitle Active 1`] = `
<div
  className="TabTitlestories__Container-kfnrg2-0 bfsypW"
>
  <span
    className="TabTitle__StyledTitle-sc-1sa0gl6-0 dgGiju"
    height={8}
  >
    This is tab title
  </span>
</div>
`;

exports[`Storyshots Atoms | TabTitle Default 1`] = `
<div
  className="TabTitlestories__Container-kfnrg2-0 bfsypW"
>
  <span
    className="TabTitle__StyledTitle-sc-1sa0gl6-0 fAyBAw"
    height={8}
  >
    This is tab title
  </span>
</div>
`;

exports[`Storyshots Atoms | TabTitle Integration: with Flexbox 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 kChVEw"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="TabTitlestories__Container-kfnrg2-0 bfsypW"
    >
      <span
        className="TabTitle__StyledTitle-sc-1sa0gl6-0 fAyBAw"
        height={8}
      >
        TabTitle1
      </span>
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="TabTitlestories__Container-kfnrg2-0 bfsypW"
    >
      <span
        className="TabTitle__StyledTitle-sc-1sa0gl6-0 dgGiju"
        height={8}
      >
        TabTitle2
      </span>
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="TabTitlestories__Container-kfnrg2-0 bfsypW"
    >
      <span
        className="TabTitle__StyledTitle-sc-1sa0gl6-0 fAyBAw"
        height={8}
      >
        TabTitle3
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | TabTitle With height modified 1`] = `
<div
  className="TabTitlestories__Container-kfnrg2-0 bfsypW"
>
  <span
    className="TabTitle__StyledTitle-sc-1sa0gl6-0 jOgXPf"
    height={11}
  >
    This is tab title
  </span>
</div>
`;
